--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -56,8 +56,7 @@ body  {
 
 .searchBar {
 	border-bottom: 2px #e5d9b9 solid;
-	padding: 0;
-	margin-bottom: 20px;
+	padding-bottom: 18px;
 }
 
 .search {
@@ -100,6 +99,10 @@ p {
 
 a:hover, a:active {
 	color: #013334;
+}
+
+.logo {
+	margin-left: 30px;
 }
 
 .mainNav {
