--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -68,7 +68,7 @@ body  {
 .search {
 	border: none;
     width: 100%;
-    margin: 0;
+    margin-top: -1px;
     padding: 0;
     background: none;
 }
@@ -76,8 +76,8 @@ body  {
 input[type=text], input[type=password] {
 	background: none;
 	border: none;
-	border-bottom: 2px #e5d9b9 solid;
-	padding: 5px;
+	border-bottom: 1px #e5d9b9 solid;
+	
 }
 
 input[type=submit] {
