--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -47,11 +47,11 @@ body  {
 }
 
 .headerBackgroundAbout {
-	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/about.jpg') no-repeat;
+	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/about.jpg') no-repeat;
 }
 
 .icon, .title {
-	margin-bottom: 13%;
+	margin-bottom: 11%;
 }
 
 .icon img{
@@ -188,4 +188,15 @@ a:hover {
 .highlightName {
 	color: #013334; 
 }
+
+.describe p {
+	text-align: left;
+	color: #e5d9b9;
+	font-family: 'ralewaysemibold', 'ralewayregular';
+
+}
+
+
+
+
 
